--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  background-color: rgb(235, 237, 238);
 }
 
 .App-logo {
@@ -36,4 +35,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+#contentwrapper {
+  position: relative;
+  top: 50px;
 }
