--- a/src/user/signup.css
+++ b/src/user/signup.css
@@ -13,7 +13,7 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
     background-size: cover;
-    background: rgb(183, 211, 243);
+    background: rgb(26, 30, 34);
     border-radius: 8px;
     padding: 12px 12px;;
 }
@@ -24,19 +24,29 @@ body{
     text-decoration: none;
     text-align: center;
     align-items: center;
-    border-bottom: 1px solid #2377c5
-
+    border-bottom: 1px solid #2377c5;
+    color: rgb(236, 237, 238);
 
 }
-
+.companytitle{
+    font-size: 24px;
+    color: rgb(236, 237, 238);
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
 input {
     border: none;
     background: transparent;
     padding: 2px 10px;
     margin-top: auto;
-    box-shadow: none
-
+    box-shadow: none;
+    color: white;
 }
+
+input, select, textarea{
+    color: rgb(236, 237, 238);
+}
+
 .userentry {
     width: 320px;
 }
