--- a/src/modules/module.css
+++ b/src/modules/module.css
@@ -1,3 +1,44 @@
 #module {
     margin-left: 32px;
 }
+#modulelist h2 {
+    margin-bottom: 40px;
+    font-size: 32px;
+}
+.moduleentry.card {
+    margin: auto;
+    width: 80%;
+    margin-bottom: 4px;
+    box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
+    background-color: rgb(255, 255, 255);
+    border-radius: 1px;
+    border-left: none;
+    border-right: none;
+
+}
+
+.moduleentry.card:hover {
+    background-color: rgb(238, 238, 238);
+
+}
+.moduleentry.card p{
+    font-size: 20px;
+    text-align: left;
+    padding-left: 12px;
+    padding-right: 12px;   
+}
+
+.moduleentry.card{
+    text-decoration: none;
+    font-size: 24px;
+    color:rgb(73, 73, 73)
+
+}
+
+.sidebar.button{
+    background-color: white;
+}
+
+.sidebar.button:hover{
+    background-color: rgb(48, 83, 177);
+}
