--- a/src/modules/paintinghouses/components/PaintingHouses.css
+++ b/src/modules/paintinghouses/components/PaintingHouses.css
@@ -22,9 +22,34 @@
     row-gap: 16px;
   
 }
+.paintinghousesselectors{
+    margin-top: 60px;
+}
+.paintinghouses.selection.cell {
+    float: left;
+    margin-right: 8px;
+}
 
-.paintinghousescosts .cell{
+.paintinghouses.unselected.selection.cell {
+    width: 36px;
+    height: 36px;
+}
+.paintinghouses.selected.selection.cell {
+    width: 48px;
+    height: 48px;
+}
+
+.paintinghousescosts .paintinghouses.cell{
     color: white;
     border: none;
     font-size: 20px;
+}
+
+.paintinghouses.cell{
+    border: 1px solid black;
+}
+
+#paintinghousestotalcost {
+    font-size: 24px;
+    text-decoration: underline;
 }
