--- a/src/modules/module.css
+++ b/src/modules/module.css
@@ -47,13 +47,25 @@
     margin: auto;
     width: 70%;
     margin-bottom: 4px;
-    box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.5);
+    box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5);
     background-color: rgb(255, 255, 255);
     border-radius: 1px;
     border-left: none;
     border-right: none;
 
 }
+
+.moduleentry.card p{
+    float: left;
+}
+.moduleentry.card img{
+    margin-top: 20px;
+    margin-left: 20px;
+    width: 200px;
+    height: 240px;
+    float: left;
+}
+
 
 .moduleentry.card:hover {
     background-color: rgb(238, 238, 238);
