Added More seamless Loading
Added conditional rendering for loaded compnents to make loading new screens that pull from the database look more natural

--- a/src/modules/module.css
+++ b/src/modules/module.css
@@ -5,7 +5,9 @@
 #module {
     margin-left: 32px;
     float:left;
-
+    background-color: white;
+    padding: 16px;
+    border-radius: 8px;
 }
 
 #modulelist {
