--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
   background-color: var(--background-gray-color);
+  font-family: 'Arvo', serif;
+  font-size: 16px;
+  font-weight: 500;
   min-height: 100vh;
   margin-bottom: 0px;
 }
