--- a/src/modules/module.css
+++ b/src/modules/module.css
@@ -14,7 +14,6 @@
     float:left;
 
 }
-
 .moduleentry.card:last-child {
     margin-bottom: 240px;
 }
@@ -88,17 +87,15 @@
 
 .moduleentry.card .content {
     display: flex;                 
-    flex-direction: row;            
-    flex-wrap: nowrap;             
+    flex-direction: column;            
     margin-left: 240px;
-
+    justify-content: space-between;
     float: left;
     
 }
 
 .tags {
-    position: absolute;
-    bottom: 10px;
+    text-align: left;
     font-weight: bold;
 }
 
@@ -115,8 +112,9 @@
 }
 
 
+
 .moduleentry.card:hover {
-    background-color: rgb(238, 238, 238);
+    background-color: rgb(206, 206, 206);
 
 }
 .moduleentry.card p{
@@ -124,6 +122,7 @@
     text-align: left;
     padding-left: 12px;
     padding-right: 12px;   
+    margin-bottom: 40px;
 }
 
 .moduleentry.card{
