--- a/src/navbar/navbar.css
+++ b/src/navbar/navbar.css
@@ -15,6 +15,26 @@ ul {
     margin-left: 12px;
 
 }
+#signoutbutton {
+    background:transparent;
+    border:none;
+    outline:none;
+    display:block;
+    text-decoration: none;
+    color: rgb(169, 169, 170);
+    margin-top: 8px;
+}
+
+#signoutbutton:hover {
+    color: white;
+
+}
+
+#navbar li.rightnavbar {
+    float:right;
+    margin-right: 20px;
+
+}
 
 #navbar {
     position:fixed;
