--- a/src/user/signup.css
+++ b/src/user/signup.css
@@ -2,7 +2,7 @@
 
 .signupwrapper {
     position: absolute;
-    top: 40%;
+    top:240px;
     left: 50%;
     transform: translate(-50%, -50%);
     background-size: cover;
