updated CSS to fix list
Updated the CSS to fix the cards rules ensuring the last card has space at the bottom

--- a/src/cards.css
+++ b/src/cards.css
@@ -4,7 +4,9 @@
     font-size: 32px;
 }
 
-
-.card:last-child {
+.list .card {
+    margin-bottom: 4px;
+}
+.list .card:last-child {
     margin-bottom: 240px;
 }
