--- a/src/modules/boggle/components/BoggleBoard.css
+++ b/src/modules/boggle/components/BoggleBoard.css
@@ -72,7 +72,7 @@
     border-radius: 4px;
     border: 1px solid rgb(81, 146, 219);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-
+    font-size: 16px;
 }
   
 #bogglepuzzle{
