--- a/src/lessons/lesson.css
+++ b/src/lessons/lesson.css
@@ -7,6 +7,12 @@
 .lesson .pagetitle {
     margin-bottom: 60px;
 }
+
+.lesson .content img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 .lesson .content {
     font-size: 18px;
     background-color: white;
